--- a/main.css
+++ b/main.css
@@ -5,13 +5,19 @@
 }
 
 body {
-  background-color: #224189;}
+  /* background-color: #224189; */
+  background-image: url("envelop.jpg");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  font-family: 'Co Text', monospace;
+}
 
 
 /* Style the video: 100% width and height to cover the entire window */
 #myVideo {
   /* position: center; */
-  position: fixed;
+  position: absolute;
   right: 0;
   bottom: 0;
   margin-left:auto;
@@ -24,8 +30,8 @@ body {
 .content {
   position: fixed;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  color: #f1f1f1;
+  background: rgba(228, 193, 115, 0.5);
+  color: #DFDFec;
   width: 100%;
   padding: 20px;
 }
@@ -36,12 +42,13 @@ body {
   font-size: 18px;
   padding: 10px;
   border: none;
-  background: #000;
-  color: #fff;
+  background: #7299d0;
+  color: #DFDFec;
   cursor: pointer;
+  font-family: 'Co Text', monospace;
 }
 
 #myBtn:hover {
-  background: #ddd;
-  color: black;
+  background: #DFDFec;
+  color: #224189;
 }
